fix: Curated searches block alignment

--- a/foresight-theme/src/static/css/style.css
+++ b/foresight-theme/src/static/css/style.css
@@ -86,21 +86,17 @@
 }
 
 .carousel-container .cards-slick-next {
-  right: -25px;
+  right: -10px;
   top: 50%;
   transform: translate(0, -50%);
   cursor: pointer;
 }
 
 .carousel-container .cards-slick-prev {
-  left: -25px;
+  left: -10px;
   top: 50%;
   transform: translate(0, -50%);
   cursor: pointer;
-  -webkit-transform: rotate(-180deg);
-  -moz-transform: rotate(-180deg);
-  -ms-transform: rotate(-180deg);
-  transform: rotate(-180deg);
 }
 
 .carousel-container .cards-slick-prev.slick-disabled,
